Modify helm configuration

--- a/helmchart/templates/deployment-springpapp.yaml
+++ b/helmchart/templates/deployment-springpapp.yaml
@@ -2,21 +2,16 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: springapp
-  namespace: {{ include "springboot-mongo.namespace" . }}
-  labels:
-    app: springapp
-    env: {{ .Values.environment }}
+  namespace: {{ .Values.namespace }}
 spec:
   replicas: {{ .Values.springapp.replicas }}
   selector:
     matchLabels:
       app: springapp
-      env: {{ .Values.environment }}
   template:
     metadata:
       labels:
         app: springapp
-        env: {{ .Values.environment }}
     spec:
       containers:
         - name: springapp-container
@@ -30,10 +25,3 @@ spec:
               value: {{ .Values.springapp.env.mongoUser }}
             - name: MONGO_DB_PASSWORD
               value: {{ .Values.springapp.env.mongoPass }}
-          resources:
-            limits:
-              cpu: {{ .Values.springapp.resources.limits.cpu }}
-              memory: {{ .Values.springapp.resources.limits.memory }}
-            requests:
-              cpu: {{ .Values.springapp.resources.requests.cpu }}
-              memory: {{ .Values.springapp.resources.requests.memory }}
