--- a/helmchart/templates/service-mongodb.yaml
+++ b/helmchart/templates/service-mongodb.yaml
@@ -2,14 +2,10 @@ apiVersion: v1
 kind: Service
 metadata:
   name: db-service
-  namespace: {{ include "springboot-mongo.namespace" . }}
-  labels:
-    app: mongo
-    env: {{ .Values.environment }}
+  namespace: {{ .Values.namespace }}
 spec:
   selector:
     app: mongo
-    env: {{ .Values.environment }}
   ports:
     - port: {{ .Values.mongo.port }}
       targetPort: {{ .Values.mongo.port }}
